--- a/ACE/app/src/main/res/layout/main.xml
+++ b/ACE/app/src/main/res/layout/main.xml
@@ -20,27 +20,27 @@
         android:scaleType="fitCenter"
         android:adjustViewBounds="true"
     />
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="25dp"
-        android:textSize="52pt"
-        android:textColor="@android:color/white"
-        android:fontFamily="sans-serif-condensed"
-        android:text="@string/app_name"/>
+    <!--<TextView-->
+        <!--android:id="@+id/title"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_marginTop="25dp"-->
+        <!--android:textSize="52pt"-->
+        <!--android:textColor="@android:color/white"-->
+        <!--android:fontFamily="sans-serif-condensed"-->
+        <!--android:text="@string/app_name"/>-->
 
-    <!--<ImageView-->
-            <!--android:id="@+id/title"-->
-            <!--android:layout_width="250dp"-->
-            <!--android:layout_height="150dp"-->
-            <!--android:src="@drawable/ace"-->
-            <!--android:layout_alignParentTop="true"-->
-            <!--android:layout_marginTop="50dp"-->
-            <!--android:background="@android:color/transparent"-->
-            <!--android:layout_centerInParent="true"/>-->
+    <ImageView
+            android:id="@+id/title"
+            android:layout_width="225dp"
+            android:layout_height="150dp"
+            android:src="@drawable/acelogo"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="50dp"
+            android:background="@android:color/transparent"
+            android:layout_centerInParent="true"/>
 
 
     <!--<Button-->
