--- a/ACE/app/src/main/res/layout/login.xml
+++ b/ACE/app/src/main/res/layout/login.xml
@@ -30,14 +30,15 @@
 
         <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
             <LinearLayout
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_gravity="center">
 
                 <EditText
                         android:textCursorDrawable="@drawable/color_cursor_white"
@@ -52,20 +53,27 @@
                         android:layout_height="wrap_content"
                         android:textColor="@android:color/white"
                         android:padding="10dp"
-                        android:backgroundTint="@color/colorAccent1"/>
+                        android:backgroundTint="@color/colorAccent1"
+                        android:layout_marginVertical="10dp"
+                        android:autofillHints="Email"
+                />
 
                 <EditText
                         android:textCursorDrawable="@drawable/color_cursor_white"
                         android:layout_marginTop="10dp"
                         android:drawableStart="@drawable/ic_lock"
                         android:textColorHint="@android:color/white"
+                        android:textColor="@android:color/white"
                         android:hint="@string/password"
                         android:inputType="textPassword"
                         android:drawablePadding="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="10dp"
-                        android:backgroundTint="@color/colorAccent1"/>
+                        android:backgroundTint="@color/colorAccent1"
+                        android:layout_marginVertical="10dp"
+                        android:autofillHints="@string/password"
+                />
 
                 <Button
                         android:layout_width="match_parent"
@@ -73,6 +81,7 @@
                         android:background="@color/colorFour"
                         android:text="@string/log_in"
                         android:id="@+id/loginBttn"
+                        android:translationY="20dp"
                         android:layout_marginTop="30dp"
                         android:layout_marginBottom="30dp"
                         android:textAllCaps="false"
