--- a/ACE/app/src/main/res/values/styles.xml
+++ b/ACE/app/src/main/res/values/styles.xml
@@ -29,6 +29,12 @@
         <item name="android:statusBarColor">@android:color/background_dark</item>
     </style>
 
+    <style name="Theme.AppCompat.Light.NoStatusBar.Login">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@color/colorTwo</item>
+    </style>
+
     <style name="Theme.AppCompat.Light.ActionBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
     <style name="Theme.AppCompat.Light.ActionBar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
