--- a/ACE/app/src/main/res/layout/login.xml
+++ b/ACE/app/src/main/res/layout/login.xml
@@ -41,12 +41,13 @@
                     android:layout_gravity="center">
 
                 <EditText
+                        android:id="@+id/emailText"
                         android:textCursorDrawable="@drawable/color_cursor_white"
                         android:layout_marginTop="20dp"
                         android:drawableStart="@drawable/ic_profile"
                         android:hint="@string/emailHint"
                         android:textColorHint="@android:color/white"
-                        android:inputType="text"
+                        android:inputType="textEmailAddress"
                         android:singleLine="true"
                         android:drawablePadding="10dp"
                         android:layout_width="match_parent"
@@ -54,11 +55,12 @@
                         android:textColor="@android:color/white"
                         android:padding="10dp"
                         android:backgroundTint="@color/colorAccent1"
-                        android:layout_marginVertical="10dp"
+                        android:layout_marginBottom="10dp"
                         android:autofillHints="Email"
                 />
 
                 <EditText
+                        android:id="@+id/passwordText"
                         android:textCursorDrawable="@drawable/color_cursor_white"
                         android:layout_marginTop="10dp"
                         android:drawableStart="@drawable/ic_lock"
