--- a/ACE/app/src/main/res/layout/viewhotspotdetails.xml
+++ b/ACE/app/src/main/res/layout/viewhotspotdetails.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -13,33 +13,40 @@
             app:titleTextColor="@android:color/white"
             app:title="@string/HotspotDetails"
             android:elevation="4dp"
-            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toTopOf="parent">
     </android.support.v7.widget.Toolbar>
     <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="175dp"
+            android:layout_height="175dp"
             tools:srcCompat="@tools:sample/avatars"
             android:id="@+id/photo_view"
             android:layout_below="@id/toolbar"
-            android:layout_marginTop="24dp"
-            android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="24dp"
-            android:contentDescription="Hotspot Detail Image"/>
+            android:contentDescription="Hotspot Detail Image"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
 
     <TextView
             android:text="@string/Notes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/notesLabel"
-            android:layout_below="@+id/photo_view" android:layout_marginBottom="6dp"
-            android:textColor="@color/disabledButton" android:layout_marginStart="24dp"
-            android:layout_marginEnd="24dp"/>
+            android:layout_below="@+id/photo_view"
+            android:textColor="@color/disabledButton"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/photo_view" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"/>
     <TextView
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:id="@+id/textView"
             android:layout_below="@+id/notesLabel" android:text="@string/NothingToDisplay"
             android:background="@android:color/white" android:textSize="18sp"
-            android:paddingStart="24dp" android:paddingEnd="24dp"/>
+            android:paddingStart="24dp" android:paddingEnd="24dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/notesLabel" tools:layout_editor_absoluteX="0dp"/>
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
