--- a/ACE/app/src/main/res/layout/hotspotdetails.xml
+++ b/ACE/app/src/main/res/layout/hotspotdetails.xml
@@ -14,9 +14,10 @@
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             app:layout_constraintStart_toStartOf="parent"
-             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintTop_toTopOf="parent">
+
         <Button
                 android:id="@+id/finishBttn"
                 android:layout_width="wrap_content"
@@ -38,20 +39,25 @@
             android:layout_height="175dp"
             android:layout_below="@+id/toolbar"
             android:contentDescription="@string/hotspot_detail_image"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"/>
 
     <ImageView
             android:id="@+id/hotspotDetailsImageViewSmallTL"
-            android:src="@drawable/addpicturesmall"
-            android:layout_width="76dp"
-            android:layout_height="76dp"
+            android:src="@drawable/addpicture"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_below="@+id/toolbar"
             android:layout_toEndOf="@id/hotspotDetailsImageView"
-            app:layout_constraintStart_toEndOf="@+id/hotspotDetailsImageView" android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/hotspotDetailsImageViewSmallTR"
-    />
+            app:layout_constraintStart_toEndOf="@+id/hotspotDetailsImageView"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="36dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:layout_marginEnd="8dp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.629"/>
 
     <ImageView
             android:id="@+id/hotspotDetailsImageViewSmallBL"
@@ -62,8 +68,12 @@
             android:layout_toEndOf="@id/hotspotDetailsImageView"
             android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toStartOf="@+id/hotspotDetailsImageViewSmallBR"
-            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/hotspotDetailsImageViewSmallTL"
-            app:layout_constraintStart_toEndOf="@+id/hotspotDetailsImageView" android:layout_marginStart="8dp"/>
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/hotspotDetailsImageViewSmallTL"
+            app:layout_constraintStart_toEndOf="@+id/hotspotDetailsImageView"
+            android:layout_marginStart="8dp"
+            android:visibility="invisible"
+    />
 
     <ImageView
             android:id="@+id/hotspotDetailsImageViewSmallTR"
@@ -73,8 +83,10 @@
             android:layout_below="@+id/toolbar"
             android:layout_toEndOf="@id/hotspotDetailsImageViewSmallTL"
             android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="invisible"
     />
 
     <ImageView
@@ -84,8 +96,11 @@
             android:layout_height="76dp"
             android:layout_below="@+id/hotspotDetailsImageViewSmallTR"
             android:layout_toEndOf="@id/hotspotDetailsImageViewSmallBL"
-            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/hotspotDetailsImageViewSmallTR"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/hotspotDetailsImageViewSmallTR"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="invisible"/>
 
     <EditText
             android:layout_width="match_parent"
@@ -101,8 +116,11 @@
             android:layout_below="@+id/hotspotDetailsImageView"
             android:layout_marginTop="44dp"
             app:layout_constraintTop_toBottomOf="@+id/hotspotDetailsImageView"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+    />
 
     <EditText
             android:layout_width="match_parent"
@@ -115,13 +133,19 @@
 
             android:gravity="start"
             android:textColorLink="@color/CBSA_Blue"
-            android:textCursorDrawable="@drawable/color_cursor" android:backgroundTint="@color/CBSA_Blue"
-            android:maxLines="3" android:maxLength="255"
+            android:textCursorDrawable="@drawable/color_cursor"
+            android:backgroundTint="@color/CBSA_Blue"
+            android:maxLines="3"
+            android:maxLength="255"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/titleText" app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/titleText"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintVertical_bias="0.134"/>
     <ProgressBar
             android:id="@+id/progress_loader"
@@ -129,10 +153,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:visibility="invisible" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            android:visibility="invisible"
+            android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"/>
 
     <android.support.design.widget.FloatingActionButton
@@ -145,8 +173,10 @@
             app:backgroundTint="@color/CBSA_Blue"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
-            android:layout_margin="16dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
+            android:layout_margin="16dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginEnd="8dp"
             app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
