--- a/ACE/app/src/main/res/layout/settings.xml
+++ b/ACE/app/src/main/res/layout/settings.xml
@@ -14,5 +14,12 @@
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
     </android.support.v7.widget.Toolbar>
+    <TextView
+            android:id="@+id/copywrite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vehicle photos licensed from Evox Images"
+            android:layout_below="@id/toolbar"
+    />
 
 </RelativeLayout>
