--- a/ACE/app/src/main/res/layout/viewhotspotdetails.xml
+++ b/ACE/app/src/main/res/layout/viewhotspotdetails.xml
@@ -31,6 +31,14 @@
             android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
 
+    <ImageView
+            android:layout_width="175dp"
+            android:layout_height="175dp" tools:srcCompat="@tools:sample/avatars"
+            android:id="@+id/imageViewSecondary"
+            app:layout_constraintStart_toEndOf="@+id/photo_view" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
+
     <TextView
             android:text="@string/Notes"
             android:layout_width="wrap_content"
@@ -48,5 +56,6 @@
             android:background="@android:color/white" android:textSize="18sp"
             android:paddingStart="24dp" android:paddingEnd="24dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/notesLabel" tools:layout_editor_absoluteX="0dp"/>
+
 
 </android.support.constraint.ConstraintLayout>
