--- a/ACE/app/src/main/res/layout/imageview.xml
+++ b/ACE/app/src/main/res/layout/imageview.xml
@@ -55,6 +55,14 @@
 
     </android.support.design.widget.TabLayout>
 
+    <TextView
+            android:id="@+id/pictureCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/_1_of_1"
+            android:layout_below="@id/tabLayout"
+    />
+
     <ImageView
             android:id="@+id/imageViewE"
             android:layout_width="match_parent"
