Migrated to AndroidX

--- a/ACE/app/src/main/res/layout/addhotspot.xml
+++ b/ACE/app/src/main/res/layout/addhotspot.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/white">
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -28,7 +28,7 @@
                 android:elevation="0dp"
                 android:enabled="false"
         />
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
 
     <ImageView
             android:id="@+id/addHotspotImageView"
