--- a/ACE/app/src/main/res/layout/list_item.xml
+++ b/ACE/app/src/main/res/layout/list_item.xml
@@ -5,7 +5,7 @@
               android:layout_height="wrap_content"
               android:id="@+id/linearLayoutM">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_margin="5dp"
         android:layout_width="match_parent"
@@ -37,6 +37,6 @@
                     android:layout_height="wrap_content" android:maxLines="1"/>
         </LinearLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
