--- a/ACE/app/src/main/res/layout/settings.xml
+++ b/ACE/app/src/main/res/layout/settings.xml
@@ -4,7 +4,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -13,7 +13,7 @@
             app:title="@string/Settings"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
-    </android.support.v7.widget.Toolbar>
+    </androidx.appcompat.widget.Toolbar>
     <TextView
             android:id="@+id/copywrite"
             android:layout_width="wrap_content"
